# Backup-of-undergraduate-study-materials

./: README.md
VB程序设计/: PPT1 Visual Basic .ppt  PPT10 键盘与鼠标事件过程.ppt  PPT11 菜单程序设计.ppt  PPT12 对话框程序设计.ppt  PPT13 多重窗体程序设计与环境.ppt  PPT14 数据文件.ppt  PPT2 对象及其操作.ppt  PPT3 简单程序设计.ppt  PPT4 程序设计基础.ppt  PPT5 数据的输入输出.ppt  PPT6 常用标准控件.ppt  PPT7 VB控制结构.ppt  PPT8 数组.ppt  PPT9 过程.ppt
信息安全技术基础/: 0课程简介.pptx  10第3部分-密码学中的数据完整性算法-第12章-消息认证码MAC.ppt  10第3部分-数据完整性-第13章数字签名.pptx  11第3部分-密码学中的数据完整性算法-第13章-数字签名和认证协议.ppt  11第4部分-相互信任-第14章密钥管理和分发.pptx  11第4部分-相互信任-第14章密钥管理和分发PKI-CA.pptx  12第4部分-相互信任-第15章用户认证Kerberos.pptx  13第5部分-网络安全.pptx  14第5部分-网络安全-第17章SSL与VPN.docx  16第5部分-网络安全-第19章电子邮件安全PGP1.pptx  17第5部分-网络安全-第20章IPSec.docx  2018学年（1）移动、保密、信计、智科课表2018.7.19.xlsx  2第1部分_对称密码_第2章.pptx  2第1部分_对称密码_第2章1.pptx  2第1部分_对称密码_第2章信息隐藏.pptx  3第1部分-对称密码-第3章.ppt  3第1部分-对称密码-第3章.pptx  3第1部分-对称密码-第3章DES.pptx  3第1部分-对称密码-第4章有限域.ppt  3第1部分-对称密码-第4章有限域1.pptx  4第1部分-对称密码-第3章DES.ppt  5第1部分-对称密码-第6章-应用.pptx  6第1部分-对称密码-第6章-应用.pptx  6第2部分-非对称密码-第9章-RSA.pptx  7第2部分-公钥密码-第9章-公钥密码学和RSA.ppt  8第2部分-公钥密码-第10章-密钥管理及其他公钥体制.ppt  8第3部分-数据完整性-第11章HASH函数.pptx  9第3部分-数据完整性-第12章消息认证码.pptx  CISP-2－入侵检测.ppt  中山大学课程教学方案表-信息安全技术.doc  你的手机是否安全9-10.docx  国家网络安全宣传周.docx  密码学.docx  电子签名法.docx  电子邮件PGP实验.doc  笔记.md  考点.txt  计算机犯罪.docx  计算机病毒.docx  防火墙有哪些主要技术.docx
公选/: 昆虫复习题.docx  飞镖比赛规则.docx
其他/: BitLocker 恢复密钥 A623BD39-072E-4619-B6B8-59F6CE650127.TXT
工程基础训练/: 7ae6bd96a67cd5847b4fac6d19f49b45(1).pptx  project.pptx  书面报告.docx  作品构思报告.docx  工程基础训练（1）.docx  工程基础训练（1）.ppt  工程基础训练（2）.pptx  工程基础训练（4）.pptx  工程基礎訓練（4）.docx  目前国家对个人信息的保护.docx  美国政府与苹果撕逼事件.docx
形式与政策/: 形式与政策作业.docx  形式与政策作业.txt
数值计算/: 公式纸修改.docx
数字电子技术/: 16337341-朱志儒-汽车尾灯控制电路.docx  Proteus8.0专业版ISIS的使用.txt
数据库/: 《数据库系统》试卷题型.doc
普通物理/: 99普通物理总复习.docx
毛概/: 毛概复习.docx  毛概复习_ZYM.doc  毛概必背问题 (1).docx
科技论文阅读与写作/: How to get your CVPR paper rejected.pptx  第一周.ppt  (+15 more)
算法设计与应用基础/alg2018/: 1.1mergesort.cpp  1.2qsort.cpp  1.3countingsort.cpp  1.4findklarge.cpp  1.5CloestPair.cpp  2.1dfs.cpp  2.2korasaju.cpp  3.1bfs.cpp  3.2dijkstra.cpp  4.1kruskal.cpp  4.2prim.cpp  4.3huffman.cpp  6.1maxsubarray.cpp  6.2BestTimeBuySell.cpp  6.3MaxProductSubarrary.cpp  6.4LongestIncreasingSubsequence.cpp  6.5EditDistance.cpp  6.6packing.cpp  7.1nQueen.cpp  7.2SumOfSub.cpp  CF_1.cpp  CF_2.cpp  CF_3.cpp  CF_4.cpp  CMakeLists.txt  alg.h  myCF_4.cpp
(+8583 files in other folders)
